--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -8,15 +8,14 @@
 </head>
 <body>
     <div class="center">
+       <div class="flex">
+        <div class="yellow"></div>
+        <div class="yellow"></div>
+        <div class="yellow"></div>
+       </div>
         <div class="yellow"></div>
         <div class="flex">
-            <div>
-                <div class="flex">
-                    <div class="yellow"></div>
-                    <div class="yellow"></div>
-                </div>
-                <div class="yellow"></div>
-            </div>
+            <div class="yellow esticar"></div>
             <div class="yellow"></div>
         </div>
     </div>
