--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -8,16 +8,15 @@
 </head>
 <body>
     <div class="center">
-       <div class="flex">
-        <div class="yellow"></div>
-        <div class="yellow"></div>
-        <div class="yellow"></div>
-       </div>
-        <div class="yellow"></div>
         <div class="flex">
-            <div class="yellow esticar"></div>
             <div class="yellow"></div>
-        </div>
+            <div>
+                <div class="yellow"></div>
+                <div class="flex">
+                    <div class="yellow aumentar"></div>
+                    <div class="yellow"></div>
+                </div>
+            </div>
     </div>
 </body>
 </html>
