--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -9,9 +9,11 @@
 <body>
     <div class="center">
         <div class="flex">
-            <div class="yellow"></div>
-            <div> 
-                <div class="yellow"></div>
+            <div>
+                <div class="flex">
+                    <div class="yellow"></div>
+                    <div class="yellow"></div>
+                </div>
                 <div class="yellow aumentar"></div>
             </div>
             <div class="yellow"></div>
