--- a/layouts/style.css
+++ b/layouts/style.css
@@ -15,13 +15,12 @@ body{
     background-color: yellow;
     padding: 100px;
     margin: 10px;
-    box-sizing: border-box;
 }
 
 .esticar{
-    width: 520px;
+    width: 500px;
 }
 
 .aumentar{
-    padding-top: 250px;
+    padding-bottom: 300px;
 }
