--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="center">
+        <div class="yellow"></div>
         <div class="flex">
             <div class="yellow"></div>
-        </div>
-        <div class="flex">
-            <div class="yellow aumentar"></div>
-            <div class="yellow"></div>
+            <div>
+                <div class="yellow"></div>
+                <div class="yellow"></div>
+            </div>
             <div class="yellow"></div>
         </div>
     </div>
