--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -10,12 +10,14 @@
     <div class="center">
         <div class="yellow"></div>
         <div class="flex">
-            <div class="yellow"></div>
             <div>
                 <div class="yellow"></div>
-                <div class="yellow"></div>
+                <div class="flex">
+                    <div class="yellow"></div>
+                    <div class="yellow"></div>
+                </div>
             </div>
-            <div class="yellow"></div>
+                <div class="yellow"></div>
         </div>
     </div>
 </body>
