--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -8,17 +8,19 @@
 </head>
 <body>
     <div class="center">
-        <div class="yellow"></div>
         <div class="flex">
             <div>
                 <div class="yellow"></div>
-                <div class="flex">
-                    <div class="yellow"></div>
-                    <div class="yellow"></div>
-                </div>
+                <div class="yellow esticar"></div>
             </div>
-                <div class="yellow"></div>
+            <div class="yellow"></div>
         </div>
+        <div class="flex">
+            <div class="yellow"></div>
+            <div>
+                <div class="yellow esticar"></div>
+            </div>
+        </div>    
     </div>
 </body>
 </html>
