--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -10,9 +10,8 @@
     <div class="center">
         <div class="flex">
             <div class="yellow"></div>
-            <div>
-                <div class="yellow esticar"></div>
-            </div>
+            <div class="yellow"></div>
+            <div class="yellow"></div>
         </div>
         <div class="flex">
             <div>
