--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -9,20 +9,18 @@
 <body>
     <div class="center">
         <div class="flex">
+            <div class="yellow"></div>
             <div>
                 <div class="flex">
                     <div class="yellow"></div>
-                    <div>
-                        <div class="yellow"></div>
-                        <div class="yellow"></div>
-                    </div>
+                    <div class="yellow"></div>
                 </div>
                 <div class="yellow"></div>
             </div>
-            <div>
-                <div class="yellow"></div>
-                <div class="yellow aumentar"></div>
-            </div>
+        </div>
+        <div class="flex">
+            <div class="yellow esticar"></div>
+            <div class="yellow"></div>
         </div>
     </div>
 </body>
